--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MusicPlayer</string>
     <string name="playMe">Play Me</string>
+    <string name="play_activity_name">Playing</string>
+    <string name="song_activity_name">Songs</string>
 </resources>
